examples/test/testpolicy6630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6630
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key0: value29
      key30: value1
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key31: value35
      podSelector:
        matchLabels:
          key32: value38
          key43: value15
